lab/cert-manager/httpbin/ingress-tls-selfsigned-cert-manager.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-tls-selfsigned-cert-manager
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
spec:
  ingressClassName: "nginx"

  tls:
    - hosts:
        - app.example.com
      secretName: httpbin-selfsigned-app-example-com
  
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
